--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="page-header">
           <h1>Christian Federmann <small>Researcher, Language Technology Lab, DFKI GmbH</small></h1>
         </div>
-      </div>
+      </section>
 
       <section id="content">
         <div class="row">
