Fixes to pass W3C validator.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <p>I have studied computer science at Saarland University
 and submitted my diploma thesis in July 2007. My PhD project is titled
-&laquo;Machine-Learning-based Hybrid Machine Translation&raquo;. See my publication/citation overview on <a href="http://scholar.google.com/citations?hl=en&user=FIkUVv4AAAAJ">Google Scholar</a>.</p>
+&laquo;Machine-Learning-based Hybrid Machine Translation&raquo;. See my publication/citation overview on <a href="http://scholar.google.com/citations?hl=en&amp;user=FIkUVv4AAAAJ">Google Scholar</a>.</p>
 
             <section id="research" style="padding-top: 30px;">
             <h3>Reseach interests</h3>
@@ -317,6 +317,7 @@ Avramidis, Marta R. Costa-Jussa, Josef van Genabith, Maite Melero, Pavel Pecina<
                 </tr>
               </tbody>
             </table>
+            </section>
           </div>
         </div>
       </section>
