Fix to make it work on both deployment hosts.

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ Avramidis, Marta R. Costa-Jussa, Josef van Genabith, Maite Melero, Pavel Pecina<
       <section id="footer" style="padding-top: 60px;">
         <hr/>
         <footer>
-          <p class="muted"><small>&copy; Christian Federmann 2012, all rights reserved.<!--#if expr="ssi_enabled" --><!--#config timefmt="%B %d, %Y" -->Page last modified <!--#echo var="LAST_MODIFIED" -->.<!--#endif --></small></p>
+          <p class="muted"><small>&copy; Christian Federmann 2012, all rights reserved. <!--#if expr="LAST_MODIFIED" --><!--#config timefmt="%B %d, %Y" -->Page last modified <!--#echo var="LAST_MODIFIED" -->.<!--#endif --></small></p>
         </footer>
       </section>
 
