Added link to bibliography file.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ and submitted my diploma thesis in July 2007. My PhD project is titled
 
             <section id="publications" style="padding-top: 30px;">
             <h3>Publications</h3>
+            <p>A list of all publications is available in for download <a href="bibliography.bib">BibTex format</a>.</p>
             <table class="table table-striped">
               <thead>
                 <tr>
