Fixed KI 2012 reference, re-generated publications list.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ and submitted my diploma thesis in July 2007. My PhD project is titled
                 <tr>
                   <td>33</td>
                   <td>
-                    <p>A Machine-Learning Framework for Hybrid Machine Translation <span class="label  label-important">Not available</span><br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the 35th Annual German Conference on Artificial Intelligence (KI-2012), September 2012</small></p>
+                    <p>A Machine-Learning Framework for Hybrid Machine Translation<br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the 35th Annual German Conference on Artificial Intelligence (KI-2012), Saarbr&uuml;cken, Germany, September 2012</small><br/><span class="label">URL</span> <small><a href="http://dx.doi.org/10.1007/978-3-642-33347-7_4">http://dx.doi.org/10.1007/978-3-642-33347-7_4</a></small></p>
                   </td>
                 </tr>
                 <tr>
