--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@ and submitted my diploma thesis in July 2007. My PhD project is titled
               </thead>
               <tbody>
                 <tr>
+                  <td>35</td>
+                  <td>
+                    <p>Experiments with Term Translation <span class="label  label-important">Accepted for publication</span><br/><strong><small>Mihael Arcan, Christian Federmann, Paul Buitelaar</small></strong><br/><small>Proceedings of the 24th International Conference on Computational Linguistics, December 2012</small></p>
+                  </td>
+                </tr>
+                <tr>
                   <td>34</td>
                   <td>
                     <p>Hybrid Machine Translation Using Joint, Binarised Feature Vectors <span class="label  label-important">Accepted for publication</span><br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the Tenth Biennial Conference of the Association for Machine Translation in the Americas (AMTA 2012), October 2012</small></p>
