Updated AMTA-12 publication.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ and submitted my diploma thesis in July 2007. My PhD project is titled
                 <tr>
                   <td>34</td>
                   <td>
-                    <p>Hybrid Machine Translation Using Joint, Binarised Feature Vectors <span class="label  label-important">Accepted for publication</span><br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the Tenth Biennial Conference of the Association for Machine Translation in the Americas (AMTA 2012), October 2012</small></p>
+                    <p>Hybrid Machine Translation Using Joint, Binarised Feature Vectors<br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the Tenth Biennial Conference of the Association for Machine Translation in the Americas (AMTA 2012), San Diego, USA, October 2012</small><br/><span class="label">URL</span> <small><a href="http://amta2012.amtaweb.org/AMTA2012Files/papers/126.pdf">http://amta2012.amtaweb.org/AMTA2012Files/papers/126.pdf</a></small></p>
                   </td>
                 </tr>
                 <tr>
