--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@ and submitted my diploma thesis in July 2007. My PhD project is titled
               </thead>
               <tbody>
                 <tr>
+                  <td>37</td>
+                  <td>
+                    <p>Results from the ML4HMT-12 Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation <span class="label  label-important">Accepted for publication</span><br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the Second Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-12), December 2012</small></p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>36</td>
+                  <td>
+                    <p>System Combination Using Joint, Binarised Feature Vectors <span class="label  label-important">Accepted for publication</span><br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the Second Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-12), December 2012</small></p>
+                  </td>
+                </tr>
+                <tr>
                   <td>35</td>
                   <td>
                     <p>Experiments with Term Translation <span class="label  label-important">Accepted for publication</span><br/><strong><small>Mihael Arcan, Christian Federmann, Paul Buitelaar</small></strong><br/><small>Proceedings of the 24th International Conference on Computational Linguistics, December 2012</small></p>
@@ -192,13 +204,13 @@ and submitted my diploma thesis in July 2007. My PhD project is titled
                 <tr>
                   <td>22</td>
                   <td>
-                    <p>Results from the ML4HMT Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation<br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the International Workshop on Using Linguistic Information for Hybrid Machine Translation (LIHMT 2011) and of the Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4. Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-11), Barcelona, Spain, November 2011</small><br/><span class="label">URL</span> <small><a href="http://www.dfki.de/web/forschung/publikationen/renameFileForDownload?filename=ML4HMT-federmann.pdf&amp;file_id=uploads_1356">http://www.dfki.de/web/forschung/publikationen/renameFileForDownload?filename=ML4HMT-federmann.pdf&amp;file_id=uploads_1356</a></small></p>
+                    <p>Results from the ML4HMT Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation<br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the International Workshop on Using Linguistic Information for Hybrid Machine Translation (LIHMT 2011) and of the Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-11), Barcelona, Spain, November 2011</small><br/><span class="label">URL</span> <small><a href="http://www.dfki.de/web/forschung/publikationen/renameFileForDownload?filename=ML4HMT-federmann.pdf&amp;file_id=uploads_1356">http://www.dfki.de/web/forschung/publikationen/renameFileForDownload?filename=ML4HMT-federmann.pdf&amp;file_id=uploads_1356</a></small></p>
                   </td>
                 </tr>
                 <tr>
                   <td>21</td>
                   <td>
-                    <p>DFKI System Combination using Syntactic Information at ML4HMT-2011<br/><strong><small>Christian Federmann, Yu Chen, Sabine Hunsicker, Rui Wang</small></strong><br/><small>Proceedings of the International Workshop on Using Linguistic Information for Hybrid Machine Translation (LIHMT 2011) and of the Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4. Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-11), Barcelona, Spain, November 2011</small><br/><span class="label">URL</span> <small><a href="http://www.dfki.de/web/forschung/publikationen/renameFileForDownload?filename=ML4HMT-federmann-et-al.pdf&amp;file_id=uploads_1355">http://www.dfki.de/web/forschung/publikationen/renameFileForDownload?filename=ML4HMT-federmann-et-al.pdf&amp;file_id=uploads_1355</a></small></p>
+                    <p>DFKI System Combination using Syntactic Information at ML4HMT-2011<br/><strong><small>Christian Federmann, Yu Chen, Sabine Hunsicker, Rui Wang</small></strong><br/><small>Proceedings of the International Workshop on Using Linguistic Information for Hybrid Machine Translation (LIHMT 2011) and of the Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-11), Barcelona, Spain, November 2011</small><br/><span class="label">URL</span> <small><a href="http://www.dfki.de/web/forschung/publikationen/renameFileForDownload?filename=ML4HMT-federmann-et-al.pdf&amp;file_id=uploads_1355">http://www.dfki.de/web/forschung/publikationen/renameFileForDownload?filename=ML4HMT-federmann-et-al.pdf&amp;file_id=uploads_1355</a></small></p>
                   </td>
                 </tr>
                 <tr>
