Updated authors for ML4HMT-12 results overview paper.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ and submitted my diploma thesis in July 2007. My PhD project is titled
                 <tr>
                   <td>37</td>
                   <td>
-                    <p>Results from the ML4HMT-12 Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation <span class="label  label-important">Accepted for publication</span><br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the Second Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-12), December 2012</small></p>
+                    <p>Results from the ML4HMT-12 Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation <span class="label  label-important">Accepted for publication</span><br/><strong><small>Christian Federmann, Tsuyoshi Okita, Maite Melero, Marta Costa-Juss&agrave;, Toni Badia, Josef Genabith</small></strong><br/><small>Proceedings of the Second Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-12), December 2012</small></p>
                   </td>
                 </tr>
                 <tr>
