--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 
             <p>I have studied computer science at Saarland University
 and submitted my diploma thesis in July 2007. My PhD project is titled
-&laquo;Machine-Learning-based Hybrid Machine Translation&raquo;. See my publication/citation overview on <a href="http://scholar.google.com/citations?hl=en&amp;user=FIkUVv4AAAAJ">Google Scholar</a>.</p>
+&laquo;A Machine Learning Framework  for System Combination Using Joint, Binarised Feature Vectors&raquo;.</p>
+
+            <p>See my publication/citation overview on <a href="http://scholar.google.com/citations?hl=en&amp;user=FIkUVv4AAAAJ">Google Scholar</a>. My Curriculum Vitae is <a href="mailto:cfedermann@dfki.de">available on request</a>.</p>
 
             <section id="research" style="padding-top: 30px;">
             <h3>Reseach interests</h3>
