Added some more details regarding my PhD thesis. Integrated a "affiliations" section which is currently not displayed.

--- a/index.html
+++ b/index.html
@@ -76,11 +76,38 @@
 
             <p>As part of my research work, I am co-organiser of the Second Workshop on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid MT (<a href="http://www.dfki.de/ml4hmt/">ML4HMT-12</a>) co-joined with <a href="http://www.coling2012-iitb.org/">COLING 2012</a> in Mumbai, India.</p>
 
-            <p>I have studied computer science at Saarland University
-and submitted my diploma thesis in July 2007. My PhD project is titled
-&laquo;A Machine Learning Framework  for System Combination Using Joint, Binarised Feature Vectors&raquo;.</p>
+            <p>I have studied <a href="http://www.cs.uni-saarland.de/">computer science</a> and <a href="http://www.coli.uni-saarland.de/">computational linguistics</a> at Saarland University
+and submitted my diploma thesis in July 2007. My PhD project under the supervision of <a href="http://www.coli.uni-saarland.de/~hansu/">Prof. Dr. Hans Uszkoreit</a> is titled
+&laquo;A Machine Learning Framework  for System Combination Using Joint, Binarised Feature Vectors&raquo; and slated to be submitted and defended in early 2013.</p>
 
             <p>See my publication/citation overview on <a href="http://scholar.google.com/citations?hl=en&amp;user=FIkUVv4AAAAJ">Google Scholar</a>. My Curriculum Vitae is <a href="mailto:cfedermann@dfki.de">available on request</a>.</p>
+
+            <!-- cfedermann: not yet decided if this section should be added
+            <section id="affiliations" style="padding-top: 30px;">
+            <h3>Affiliations</h3>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th style="text-align:center;">Researcher at DFKI</th>
+                  <th style="text-align:center;">PhD Candidate at MMCI</th>
+                  <th style="text-align:center;">Alumnus at Saarland University</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td style="vertical-align:middle;text-align:center;"><a href="http://www.dfki.de/"><img src="dfki-logo-gray.png" /></a></td>
+                  <td style="vertical-align:middle;text-align:center;"><a href="http://www.mmci.uni-saarland.de/"><img src="mmci-logo.png" /></a></td>
+                  <td style="vertical-align:middle;text-align:center;"><a href="http://www.uni-saarland.de/"><img src="uni-saarland-logo.png" /></a></td>
+                </tr>
+                <tr>
+                  <td style="text-align:center;"><a href="http://www.dfki.de/lt/">DFKI Language Technology Lab</a></td>
+                  <td style="text-align:center;"><a href="http://gradschool.cs.uni-saarland.de">Graduate School of Computer Science</a></td>
+                  <td style="text-align:center;"><a href="http://www.cs.uni-saarland.de">Computer Science</a><br/><a href="http://www.coli.uni-saarland.de">Computational Linguistics</a></td>
+                </tr>
+              </tbody>
+            </table>
+            </section>
+            //-->
 
             <section id="research" style="padding-top: 30px;">
             <h3>Reseach interests</h3>
