Moved images to images folder and added affiliation logos.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section id="content">
         <div class="row">
           <div class="span2 muted">
-            <img src="cf.png" width="125" class="img-polaroid" alt="Photo" />
+            <img src="images/cf.png" width="125" class="img-polaroid" alt="Photo" />
 
             <address style="padding-top: 40px;">
               <strong>Contact</strong><br/>
@@ -95,9 +95,9 @@ and submitted my diploma thesis in July 2007. My PhD project under the supervisi
               </thead>
               <tbody>
                 <tr>
-                  <td style="vertical-align:middle;text-align:center;"><a href="http://www.dfki.de/"><img src="dfki-logo-gray.png" /></a></td>
-                  <td style="vertical-align:middle;text-align:center;"><a href="http://www.mmci.uni-saarland.de/"><img src="mmci-logo.png" /></a></td>
-                  <td style="vertical-align:middle;text-align:center;"><a href="http://www.uni-saarland.de/"><img src="uni-saarland-logo.png" /></a></td>
+                  <td style="vertical-align:middle;text-align:center;"><a href="http://www.dfki.de/"><img src="images/dfki-logo-gray.png" /></a></td>
+                  <td style="vertical-align:middle;text-align:center;"><a href="http://www.mmci.uni-saarland.de/"><img src="images/mmci-logo.png" /></a></td>
+                  <td style="vertical-align:middle;text-align:center;"><a href="http://www.uni-saarland.de/"><img src="images/uni-saarland-logo.png" /></a></td>
                 </tr>
                 <tr>
                   <td style="text-align:center;"><a href="http://www.dfki.de/lt/">DFKI Language Technology Lab</a></td>
