Finalised BibTex for ML4HMT-12 publications.

--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@ and submitted my diploma thesis in July 2007. My PhD project is titled
                 <tr>
                   <td>37</td>
                   <td>
-                    <p>Results from the ML4HMT-12 Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation <span class="label  label-important">Accepted for publication</span><br/><strong><small>Christian Federmann, Tsuyoshi Okita, Maite Melero, Marta Costa-Juss&agrave;, Toni Badia, Josef Genabith</small></strong><br/><small>Proceedings of the Second Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-12), December 2012</small></p>
+                    <p>Results from the ML4HMT-12 Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation<br/><strong><small>Christian Federmann, Tsuyoshi Okita, Maite Melero, Marta Costa-Juss&agrave;, Toni Badia, Josef Genabith</small></strong><br/><small>Proceedings of the Second Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-12), Mumbai, India, December 2012</small><br/><span class="label">URL</span> <small><a href="http://www.dfki.de/~cfedermann/ML4HMT/ML4HMT-2012-federmann-et-al.pdf">http://www.dfki.de/~cfedermann/ML4HMT/ML4HMT-2012-federmann-et-al.pdf</a></small></p>
                   </td>
                 </tr>
                 <tr>
                   <td>36</td>
                   <td>
-                    <p>System Combination Using Joint, Binarised Feature Vectors <span class="label  label-important">Accepted for publication</span><br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the Second Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-12), December 2012</small></p>
+                    <p>System Combination Using Joint, Binarised Feature Vectors<br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the Second Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-12), Mumbai, India, December 2012</small><br/><span class="label">URL</span> <small><a href="http://www.dfki.de/~cfedermann/ML4HMT/ML4HMT-2012-federmann.pdf">http://www.dfki.de/~cfedermann/ML4HMT/ML4HMT-2012-federmann.pdf</a></small></p>
                   </td>
                 </tr>
                 <tr>
