Added ML4HMT proceedings book reference.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@ and submitted my diploma thesis in July 2007. My PhD project under the supervisi
               </thead>
               <tbody>
                 <tr>
+                  <td>38</td>
+                  <td>
+                    <p>Proceedings of the Second Workshop on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid MT<br/><strong><small>Josef Genabith, Toni Badia, Christian Federmann, Maite Melero, Marta Costa-juss\`a, Tsuyoshi Okita</small></strong><br/><small>Book, Mumbai, India, December 2012</small><br/><span class="label">URL</span> <small><a href="http://www.aclweb.org/anthology/W12-57.pdf">http://www.aclweb.org/anthology/W12-57.pdf</a></small></p>
+                  </td>
+                </tr>
+                <tr>
                   <td>37</td>
                   <td>
                     <p>Results from the ML4HMT-12 Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation<br/><strong><small>Christian Federmann, Tsuyoshi Okita, Maite Melero, Marta Costa-Juss&agrave;, Toni Badia, Josef Genabith</small></strong><br/><small>Proceedings of the Second Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-12), Mumbai, India, December 2012</small><br/><span class="label">URL</span> <small><a href="http://www.aclweb.org/anthology/W12-5709.pdf">http://www.aclweb.org/anthology/W12-5709.pdf</a></small></p>
