Fixed problem with LaTeX character export.

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ and submitted my diploma thesis in July 2007. My PhD project under the supervisi
                 <tr>
                   <td>38</td>
                   <td>
-                    <p>Proceedings of the Second Workshop on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid MT<br/><strong><small>Editors: Josef Genabith, Toni Badia, Christian Federmann, Maite Melero, Marta Costa-juss\`a, Tsuyoshi Okita</small></strong><br/><small>Mumbai, India, December 2012</small><br/><span class="label">URL</span> <small><a href="http://www.aclweb.org/anthology/W12-57.pdf">http://www.aclweb.org/anthology/W12-57.pdf</a></small></p>
+                    <p>Proceedings of the Second Workshop on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid MT<br/><strong><small>Editors: Josef Genabith, Toni Badia, Christian Federmann, Maite Melero, Marta Costa-juss&agrave;, Tsuyoshi Okita</small></strong><br/><small>Mumbai, India, December 2012</small><br/><span class="label">URL</span> <small><a href="http://www.aclweb.org/anthology/W12-57.pdf">http://www.aclweb.org/anthology/W12-57.pdf</a></small></p>
                   </td>
                 </tr>
                 <tr>
