Fixed small problems with BibTex files.

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ and submitted my diploma thesis in July 2007. My PhD project under the supervisi
                 <tr>
                   <td>20</td>
                   <td>
-                    <p>MT Server Land Translation Services<br/><strong><small>Aljoscha Burchardt, Christian Federmann, Hans Uszkoreit</small></strong><br/><small>Hamburg Working Paper in Multilingualism. Conference of the German Society for Computational Linguistics and Language Technology (GSCL-11), Hamburg, Germany, September 2011</small><br/><span class="label">URL</span> <small><a href="http://www.dfki.de/web/forschung/publikationen/renameFileForDownload?filename=GSCL-2011-Federmann.pdf&amp;file_id=uploads_1139">http://www.dfki.de/web/forschung/publikationen/renameFileForDownload?filename=GSCL-2011-Federmann.pdf&amp;file_id=uploads_1139</a></small></p>
+                    <p>Hybrid Machine Translation for German in taraX&Uuml;: Can translation costs be decreased without degrading quality?<br/><strong><small>Aljoscha Burchardt, Christian Federmann, Hans Uszkoreit</small></strong><br/><small>Hamburg Working Paper in Multilingualism. Conference of the German Society for Computational Linguistics and Language Technology (GSCL-11), Hamburg, Germany, September 2011</small><br/><span class="label">URL</span> <small><a href="http://www.dfki.de/web/forschung/publikationen/renameFileForDownload?filename=GSCL-2011-Federmann.pdf&amp;file_id=uploads_1139">http://www.dfki.de/web/forschung/publikationen/renameFileForDownload?filename=GSCL-2011-Federmann.pdf&amp;file_id=uploads_1139</a></small></p>
                   </td>
                 </tr>
                 <tr>
