--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@ and submitted my diploma thesis in July 2007. My PhD project under the supervisi
               </thead>
               <tbody>
                 <tr>
+                  <td>39</td>
+                  <td>
+                    <p>A Feedback-enabled Machine Learning Approach for Multi-Engine Machine Translation <span class="label  label-important">Accepted for publication</span><br/><strong><small>Christian Federmann</small></strong><br/><small>Proceedings of the AAAI 2013 Spring Symposium on Lifelong Machine Learning, March 2013</small></p>
+                  </td>
+                </tr>
+                <tr>
                   <td>38</td>
                   <td>
                     <p>Proceedings of the Second Workshop on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid MT<br/><strong><small>Editors: Josef Genabith, Toni Badia, Christian Federmann, Maite Melero, Marta Costa-juss&agrave;, Tsuyoshi Okita</small></strong><br/><small>Mumbai, India, December 2012</small><br/><span class="label">URL</span> <small><a href="http://www.aclweb.org/anthology/W12-57.pdf">http://www.aclweb.org/anthology/W12-57.pdf</a></small></p>
