--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Christian Federmann — Researcher, Language Technology Lab, DFKI GmbH</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>Christian Federmann — Research Fellow, Saarland University</title>
+    <meta name="description" content="Personal website">
+    <meta name="author" content="Christian Federmann">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -12,12 +12,56 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
+
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
+    <!-- cfedermann: this needs to be cleaned up! -->
+    <style>
+
+body {
+  font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+[class*="span"] {
+  border:1px solid rgba(0, 0, 0, 0.2);
+  margin-bottom:10px;
+  margin-top:10px;
+  padding:5px;
+}
+
+.black { background-color:black;color:white; }
+.black a { color:red; }
+
+.blue { background-color:dodgerblue;color:white; }
+.blue a { color:gold; }
+
+.green { background-color:green;color:white; }
+.green a { color:greenyellow; }
+
+.orange { background-color:orange;color:white; }
+.orange a { color:yellow; }
+
+.purple { background-color:purple;color:white; }
+.purple a { color:mediumpurple; }
+
+.red { background-color:red;color:white; }
+.red a { color:gold;}
+
+.yellow { background-color:yellow;color:black; }
+.yellow a { color:dodgerblue; }
+
+.no-border { border: 0px; }
+.no-margin { margin:0px; }
+.no-padding { padding:0px; }
+
+    </style>
 
   </head>
 
   <body>
 
+<!--
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -30,113 +74,98 @@
         </div>
       </div>
     </div>
+-->
 
-    <div class="container">
+  <body>
+    <div class="container" style="padding-bottom:200px;">
+
       <section id="about" style="padding-top: 60px;">
+<!--
         <div class="alert alert-info">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
           <strong>Please note:</strong> new phone number +49 (0) 681 857 75 5353, new office coordinates C +1.09.
         </div>
-
+-->
         <div class="page-header">
-          <h1>Christian Federmann <small>Researcher, Language Technology Lab, DFKI GmbH</small></h1>
+          <h1>Christian Federmann <small>Research Fellow, Saarland University</small></h1>
         </div>
       </section>
 
-      <section id="content">
-        <div class="row">
-          <div class="span2 muted">
-            <img src="images/cf.png" width="125" class="img-polaroid" alt="Photo" />
+      <div class="row-fluid">
+        <div class="span2 no-border no-margin no-padding">
+          <div class="span12 blue" style="margin-left:2px;padding-bottom:14px;">
+            <h3>cfedermann</h3>
 
-            <address style="padding-top: 40px;">
-              <strong>Contact</strong><br/>
-              <a href="mailto:cfedermann@dfki.de">cfedermann@dfki.de</a>
-            </address>
-
-            <address style="padding-top: 20px;">
-              <strong>Company Address</strong><br/>
-              <small>DFKI GmbH<br/>
-              Campus D3 2<br/>
-              Stuhlsatzenhausweg 3<br/>
-              D-66123 Saarbrücken<br/>
-              GERMANY</small>
-            </address>
-
-            <address style="padding-top: 20px;">
-              <strong>Office Address</strong><br/>
-              <small>Campus D3 1<br/>
-              Room C +1.09<br/>
-              <abbr title="Phone">P</abbr> +49 681 85775 5353<br/>
-              <abbr title="Fax">F</abbr> +49 681 85775 5338</small>
-            </address>
+            <p><i class="icon-hand-right icon-white"></i> Campus D7 <small>2</small><br/><i class="icon-home icon-white"></i> Room 2.04</p>
           </div>
 
-          <div class="span10">
-            <p class="lead">I am a researcher at the <a href="http://www.dfki.de/lt/">Language Technology Lab</a> at <abbr title="German Research Center for Artificial Intelligence">DFKI</abbr>. My research work is currently funded by the <a href="http://www.meta-net.eu/">META-NET project</a>, focusing on &raquo;<a href="http://www.dfki.de/ml4hmt/meta-wp2/">optimising the division of labour in hybrid machine translation</a>&laquo;.</p>
+          <div class="span12 no-margin"><img src="chris_500x500.png" width="130" alt="Photo" /></div>
+        </div>
 
-            <p>As part of my research work, I am co-organiser of the Second Workshop on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid MT (<a href="http://www.dfki.de/ml4hmt/">ML4HMT-12</a>) co-joined with <a href="http://www.coling2012-iitb.org/">COLING 2012</a> in Mumbai, India.</p>
+        <div class="span6 yellow" style="min-height:160px;">
+          <p class="lead">I am a research fellow at the <a href="http://www.coli.uni-saarland.de/groups/MP/page.php?id=index">Computational Linguistics Group</a> at <a href="http://www.uni-saarland.de/">Saarland University</a>.</p>
 
-            <p>I have studied <a href="http://www.cs.uni-saarland.de/">computer science</a> and <a href="http://www.coli.uni-saarland.de/">computational linguistics</a> at Saarland University
-and submitted my diploma thesis in July 2007. My PhD project under the supervision of <a href="http://www.coli.uni-saarland.de/~hansu/">Prof. Dr. Hans Uszkoreit</a> is titled
-&laquo;A Machine Learning Framework  for System Combination Using Joint, Binarised Feature Vectors&raquo; and slated to be submitted and defended in early 2013.</p>
+          <p>I have studied <a href="http://www.cs.uni-saarland.de/">computer science</a> and <a href="http://www.coli.uni-saarland.de/">computational linguistics</a> at Saarland University
+and submitted my diploma thesis in July 2007.</p>
 
-            <p>See my publication/citation overview on <a href="http://scholar.google.com/citations?hl=en&amp;user=FIkUVv4AAAAJ">Google Scholar</a>. My Curriculum Vitae is <a href="mailto:cfedermann@dfki.de">available on request</a>.</p>
+          <p>From July 2007&mdash;April 2013, I worked as a researcher at the <a href="http://www.dfki.de/lt/">Language Technology Lab</a> at <abbr title="German Research Center for Artificial Intelligence">DFKI</abbr>. My research mostly focused on machine translation and evaluation of machine-translated text, as well as building clever information extraction tools.</p>
 
-            <!-- cfedermann: not yet decided if this section should be added
-            <section id="affiliations" style="padding-top: 30px;">
-            <h3>Affiliations</h3>
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th style="text-align:center;">Researcher at DFKI</th>
-                  <th style="text-align:center;">PhD Candidate at MMCI</th>
-                  <th style="text-align:center;">Alumnus at Saarland University</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td style="vertical-align:middle;text-align:center;"><a href="http://www.dfki.de/"><img src="images/dfki-logo-gray.png" /></a></td>
-                  <td style="vertical-align:middle;text-align:center;"><a href="http://www.mmci.uni-saarland.de/"><img src="images/mmci-logo.png" /></a></td>
-                  <td style="vertical-align:middle;text-align:center;"><a href="http://www.uni-saarland.de/"><img src="images/uni-saarland-logo.png" /></a></td>
-                </tr>
-                <tr>
-                  <td style="text-align:center;"><a href="http://www.dfki.de/lt/">DFKI Language Technology Lab</a></td>
-                  <td style="text-align:center;"><a href="http://gradschool.cs.uni-saarland.de">Graduate School of Computer Science</a></td>
-                  <td style="text-align:center;"><a href="http://www.cs.uni-saarland.de">Computer Science</a><br/><a href="http://www.coli.uni-saarland.de">Computational Linguistics</a></td>
-                </tr>
-              </tbody>
-            </table>
-            </section>
-            //-->
+          <p>My PhD project under the supervision of <a href="http://www.coli.uni-saarland.de/~hansu/">Prof. Dr. Hans Uszkoreit</a> is titled &laquo;A Machine Learning Framework  for System Combination Using Joint, Binarised Feature Vectors&raquo; and slated to be submitted in mid-2013.</p>
+        </div>
 
-            <section id="research" style="padding-top: 30px;">
-            <h3>Reseach interests</h3>
-            <p>My research interests include but are not limited to:</p>
+        <div class="span3 no-border no-margin no-padding">
+          <div class="span12 green">
+            <h3>Teaching</h3>
 
-            <dl class="dl-horizontal">
-              <dt>Machine Translation</dt>
-              <dd>Combining both statistical and rule-based MT into working, hybrid systems.</dd>
-              <dt>MT Evaluation</dt>
-              <dd>Extending MT evaluation efforts moving from automated scores to human annotation.</dd>
-              <dt>Knowledge Distribution</dt>
-              <dd>Creating a scalable, distributed network providing access to language resources.</dd>
-              <dt>Information Extraction</dt>
-              <dd>Retrieving information about companies or products from unstructured sources.</dd>
-            </dl>
+            <p>In summer 2013, I co-teach the M.Sc. <span style="display:inline-block"><i class="icon-book icon-white"></i> <a href="#">Language Technology II</a></span> course together with <span style="display:inline-block"><i class="icon-user icon-white"></i> <a href="http://www.stanford.edu/~mjkay/">Martin Kay</a></span> and <span style="display:inline-block;"><i class="icon-user icon-white"></i> <a href="http://www.coli.uni-saarland.de/~magda/">Magdalena Wolska</a></span>.</p>
+          </div>
 
-            <blockquote>
+          <div class="span12 red" style="margin-left:0px;margin-top:9px;">
+            <p><i class="icon-calendar icon-white"></i> Next meeting: April 16, 2013<br/><i class="icon-info-sign icon-white"></i> Campus C7 <small>4</small> &mdash; Room 1.17<br/>  Part of the <a href="http://www.coli.uni-saarland.de/kvv/detailpage.php?id=1968">semester introductory meeting</a> starting at 12:00 PM.</p>
+          </div>
+        </div>
+      </div><!-- <div class="row-fluid"> -->
+
+      <div class="row-fluid" style="display:none;">
+        <div class="span11" style="background-color:aliceblue;">
+            <blockquote style="margin-bottom:0px">
               <p>A man provided with paper, pencil, and rubber, and subject to strict discipline, is in effect a universal machine.</p>
               <small>Alan M. Turing</small>
             </blockquote>
-            </section>
+        </div>
+      </div><!-- <div class="row-fluid"> -->
 
-            <section id="publications" style="padding-top: 30px;">
-            <h3>Publications</h3>
-            <p>A list of all publications is available for download in <a href="bibliography.bib">BibTex format</a>.</p>
+      <div class="row-fluid">
+        <div class="span4 orange" style="min-height:160px;">
+          <h3>39 Publications</h3>
+
+          <p>See my publication/citation overview on <a href="http://scholar.google.com/citations?hl=en&amp;user=FIkUVv4AAAAJ">Google Scholar</a>. A list of all publications is available for download in <a href="bibliography.bib">BibTex format</a>.<!-- Click here to show a table with all publications below. --></p>
+        </div>
+
+        <div class="span3 purple" style="min-height:160px;">
+          <h3>CV</h3>
+
+          <p>My Curriculum Vitae is <a href="mailto:cfedermann@gmail.com">available on request</a> as PDF or DOC.</p>
+        </div>
+
+        <div class="span4 black" style="min-height:160px;">
+          <h3>Contact Details</h3>
+
+          <address>
+            <i class="icon-envelope icon-white"></i> <a href="mailto:cfedermann@coli.uni-saarland.de">cfedermann [at] coli [dot] uni-saarland [dot] de</a><br/>
+            <i class="icon-bell icon-white"></i> +49 681 85775 5353 &mdash;
+            <i class="icon-print icon-white"></i> +49 681 85775 58<br/>
+            <i class="icon-comment icon-white"></i> office hour upon agreement
+          </address>
+        </div>
+      </div><!-- <div class="row-fluid"> -->
+
+      <div class="row-fluid">
+        <div class="span11">
             <table class="table table-striped">
               <thead>
                 <tr>
-                  <th>No.</th><th>Title</th>
+                  <th>No.</th><th>Title <button type="button" class="close" data-dismiss="alert">&times;</button></th>
                 </tr>
               </thead>
               <tbody>
@@ -376,23 +405,23 @@ and submitted my diploma thesis in July 2007. My PhD project under the supervisi
                 </tr>
               </tbody>
             </table>
-            </section>
-          </div>
         </div>
-      </section>
+      </div><!-- <div class="row-fluid"> -->
 
       <section id="footer" style="padding-top: 60px;">
         <hr/>
         <footer>
-          <p class="muted"><small>&copy; Christian Federmann 2012, all rights reserved.</small></p>
+          <p class="muted"><small>&copy; Christian Federmann 2013, all rights reserved.</small></p>
         </footer>
       </section>
 
-    </div> <!-- /container -->
+    </div>
 
-    <script src="jquery-1.8.2.min.js"></script>
-    <script src="bootstrap-alert.js"></script>
-    <script>
+    <!-- cfedermann: this needs to be fixed... -->
+
+<!--    <http://script src="http://www.dfki.de/~cfedermann/jquery-1.8.2.min.js"></script>-->
+<!--    <script src="http://www.dfki.de/~cfedermann/bootstrap-alert.js"></script>-->
+<!--    <script>-->
     <!--
 
     function setActive(id) {
@@ -419,7 +448,7 @@ and submitted my diploma thesis in July 2007. My PhD project under the supervisi
     });
 
     //-->
-    </script>
+<!--    </script>-->
 
   </body>
 </html>
