Fixed image URL.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body {
             <p><i class="icon-hand-right icon-white"></i> Campus D7 <small>2</small><br/><i class="icon-home icon-white"></i> Room 2.04</p>
           </div>
 
-          <div class="span12 no-margin"><img src="chris_500x500.png" width="130" alt="Photo" /></div>
+          <div class="span12 no-margin"><img src="images/chris_500x500.png" width="130" alt="Photo" /></div>
         </div>
 
         <div class="span6 yellow" style="min-height:160px;">
