Added alert box, guessed phone no.

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@ body {
     <div class="container" style="padding-bottom:200px;">
 
       <section id="about" style="padding-top: 60px;">
-<!--
+
         <div class="alert alert-info">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
-          <strong>Please note:</strong> new phone number +49 (0) 681 857 75 5353, new office coordinates C +1.09.
+          <strong>Please note:</strong> new phone number +49 681 302 4680, new office coordinates Campus C7 <small>2</small> &mdash; Room 2.04.
         </div>
--->
+
         <div class="page-header">
           <h1>Christian Federmann <small>Research Fellow, Saarland University</small></h1>
         </div>
@@ -153,8 +153,8 @@ and submitted my diploma thesis in July 2007.</p>
 
           <address>
             <i class="icon-envelope icon-white"></i> <a href="mailto:cfedermann@coli.uni-saarland.de">cfedermann [at] coli [dot] uni-saarland [dot] de</a><br/>
-            <i class="icon-bell icon-white"></i> +49 681 85775 5353 &mdash;
-            <i class="icon-print icon-white"></i> +49 681 85775 58<br/>
+            <i class="icon-bell icon-white"></i> +49 681 302 4680 &mdash;
+            <i class="icon-print icon-white"></i> +49 681 302 4351<br/>
             <i class="icon-comment icon-white"></i> office hour upon agreement
           </address>
         </div>
