--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- Le styles -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
 
+    <!-- cfedermann: create local version of TTF font! -->
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
     <!-- cfedermann: this needs to be cleaned up! -->
@@ -60,37 +61,20 @@ body {
   </head>
 
   <body>
-
-<!--
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="brand" href="#"><code style="color: #08c;">cfedermann</code></a>
-          <ul class="nav">
-            <li class="active"><a href="#about">About</a></li>
-            <li><a href="#research">Research</a></li>
-            <li><a href="#publications">Publications</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
--->
-
-  <body>
     <div class="container" style="padding-bottom:200px;">
 
       <section id="about" style="padding-top: 60px;">
+      <div class="alert alert-info">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Please note:</strong> new phone number +49 681 302 4680, new office coordinates Campus C7 <small>2</small> &mdash; Room 2.04.
+      </div>
 
-        <div class="alert alert-info">
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-          <strong>Please note:</strong> new phone number +49 681 302 4680, new office coordinates Campus C7 <small>2</small> &mdash; Room 2.04.
-        </div>
-
-        <div class="page-header">
-          <h1>Christian Federmann <small>Research Fellow, Saarland University</small></h1>
-        </div>
+      <div class="page-header">
+        <h1>Christian Federmann <small>Research Fellow, Saarland University</small></h1>
+      </div>
       </section>
 
+      <section id="tiles">
       <div class="row-fluid">
         <div class="span2 no-border no-margin no-padding">
           <div class="span12 blue" style="margin-left:2px;padding-bottom:14px;">
@@ -407,13 +391,14 @@ and submitted my diploma thesis in July 2007.</p>
             </table>
         </div>
       </div><!-- <div class="row-fluid"> -->
+      </section><!-- <section id="tiles"> -->
 
       <section id="footer" style="padding-top: 60px;">
-        <hr/>
-        <footer>
-          <p class="muted"><small>&copy; Christian Federmann 2013, all rights reserved.</small></p>
-        </footer>
-      </section>
+      <hr/>
+      <footer>
+        <p class="muted"><small>&copy; Christian Federmann 2013, all rights reserved.</small></p>
+      </footer>
+      </section><!-- <section id="footer"> -->
 
     </div>
 
