--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ body {
     </div>
 
     <script src="jquery-1.9.1.min.js"></script>
-    <script src="bootstrap/js/bootstrap.js"></script>-->
+    <script src="bootstrap/js/bootstrap.js"></script>
     <script>
     <!--
 
