--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body {
       <section id="tiles">
       <div class="row-fluid">
         <div class="span2 no-border no-margin no-padding">
-          <div class="span12 blue" style="margin-left:2px;padding-bottom:14px;">
+          <div class="span12 was-blue tile" style="margin-left:2px;padding-bottom:14px;">
             <h3>cfedermann</h3>
 
             <p><i class="icon-hand-right icon-white"></i> Campus D7 <small>2</small><br/><i class="icon-home icon-white"></i> Room 2.04</p>
@@ -96,7 +96,7 @@ body {
           <div class="span12 no-margin"><img src="images/gravatar.png" width="130" alt="Photo" /></div>
         </div>
 
-        <div class="span6 green" style="min-height:160px;">
+        <div class="span6 was-green tile" style="min-height:160px;">
           <p class="lead">I am a research fellow at the <a href="http://www.coli.uni-saarland.de/groups/MP/page.php?id=index">Computational Linguistics Group</a> at <a href="http://www.uni-saarland.de/">Saarland University</a>.</p>
 
           <p>I have studied <a href="http://www.cs.uni-saarland.de/">computer science</a> and <a href="http://www.coli.uni-saarland.de/">computational linguistics</a> at Saarland University and submitted my diploma thesis in July 2007.</p>
@@ -107,13 +107,13 @@ body {
         </div>
 
         <div class="span3 no-border no-margin no-padding">
-          <div class="span12 yellow">
+          <div class="span12 was-yellow tile">
             <h3>Teaching</h3>
 
             <p>In summer 2013, I co-teach the M.Sc. <span style="display:inline-block"><i class="icon-book icon-black"></i> <a href="#">Language Technology II</a></span> course together with <span style="display:inline-block"><i class="icon-user icon-black"></i> <a href="http://www.stanford.edu/~mjkay/">Martin Kay</a></span> and <span style="display:inline-block;"><i class="icon-user icon-black"></i> <a href="http://www.coli.uni-saarland.de/~magda/">Magdalena Wolska</a></span>.</p>
           </div>
 
-          <div class="span12 orange" style="margin-left:0px;margin-top:9px;">
+          <div class="span12 was-orange tile" style="margin-left:0px;margin-top:9px;">
             <p><i class="icon-calendar icon-white"></i> Next meeting: April 16, 2013<br/><i class="icon-info-sign icon-white"></i> Campus C7 <small>4</small> &mdash; Room 1.17<br/>  Part of the <a href="http://www.coli.uni-saarland.de/kvv/detailpage.php?id=1968">semester introductory meeting</a> starting at 12:00 PM.</p>
           </div>
         </div>
@@ -129,19 +129,19 @@ body {
       </div><!-- <div class="row-fluid"> -->
 
       <div class="row-fluid">
-        <div class="span4 black" style="min-height:160px;">
+        <div class="span4 was-black tile" style="min-height:160px;">
           <h3>39 Publications</h3>
 
           <p>See my publication/citation overview on <a href="http://scholar.google.com/citations?hl=en&amp;user=FIkUVv4AAAAJ">Google Scholar</a>. A list of all publications is available for download in <a href="bibliography.bib">BibTex format</a>. You can show a table with all publications by <a href="javascript:showPublications();">clicking here</a>.</p>
         </div>
 
-        <div class="span3 purple" style="min-height:160px;">
+        <div class="span3 was-purple tile" style="min-height:160px;">
           <h3>CV</h3>
 
           <p>My Curriculum Vitae is <a href="mailto:cfedermann@gmail.com">available on request</a> as PDF or DOC.</p>
         </div>
 
-        <div class="span4 red" style="min-height:160px;">
+        <div class="span4 was-red tile" style="min-height:160px;">
           <h3>Contact Details</h3>
 
           <address>
@@ -431,6 +431,15 @@ body {
 
       $("section#about .alert").on("click", function(event) {
         closeAlert();
+      });
+
+      // randomise tile colors;
+      var colors = ["blue","green","yellow","orange","red","purple","black"];
+      var tiles = $("#tiles .tile");
+      var startIndex = 0; //Math.floor(Math.random() * colors.length);
+      tiles.each(function(index) {
+        var pos = (startIndex+index) % colors.length;
+        $(this).addClass(colors[pos]);
       });
     });
 
