Created local version of Roboto Condensed font, added own core CSS file and changed index.html accordingly.

--- a/index.html
+++ b/index.html
@@ -13,62 +13,8 @@
 
     <!-- Le styles -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-
-    <!-- cfedermann: create local version of TTF font! -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-
-    <!-- cfedermann: this needs to be cleaned up! -->
-    <style>
-
-body {
-  font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-[class*="span"] {
-  border:1px solid rgba(0, 0, 0, 0.2);
-  margin-bottom:10px;
-  margin-top:10px;
-  padding:5px;
-}
-
-.black { background-color:black;color:white; } /*dimgray*/
-.black a { color:darkgray; } /*black*/
-
-.blue { background-color:dodgerblue;color:white; }
-.blue a { color:darkblue; }
-
-.green { background-color:green;color:white; }
-.green a { color:greenyellow; }
-
-.orange { background-color:orange;color:white; }
-.orange a { color:yellow; }
-
-.purple { background-color:purple;color:white; }
-.purple a { color:mediumpurple; }
-
-.red { background-color:darkred;color:white; }
-.red a { color:red;}
-
-.yellow { background-color:yellow;color:black; }
-.yellow a { color:darkorange; }
-
-.no-border { border: 0px; }
-.no-margin { margin:0px; }
-.no-padding { padding:0px; }
-
-    </style>
-
+    <link rel="stylesheet" href="core.css">
   </head>
-
-<!-- color cycles:
-
-0) green, yellow, orange, red, purple, black, blue
-
-1) blue, green, yellow, orange, red, purple, black
-
-2) black, blue, green, yellow, orange, red, purple
-
--->
 
   <body>
     <div class="container" style="padding-bottom:200px;">
